--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ before_install:
 - sh -e /etc/init.d/xvfb start
 script: >
   mvn clean install verify serenity:aggregate
-  -Dstory=all
+  -Dstory=home
   -DtestDestination=Chrome
 install: true
