--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,7 @@ script: >
   -Dstory=all
   -DtestDestination=Chrome
 install: true
+
+script: "mvn cobertura:cobertura"
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
