--- a/pom.xml
+++ b/pom.xml
@@ -86,14 +86,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>2.22.2</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.22.0</version>
+                   <version>2.22.2</version>
+                 <scope>test</scope>
                 <configuration>
                     <includes>
                         <include>**/*Tests.java</include>
